search functionality has been completed

--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,13 @@ body{
 .loader{
     color: blue;
 }
+
+/* .container{
+    justify-content: center;
+} */
+
+.form{
+    display: flex;
+    justify-content: center;
+    margin: 8px;
+}
